--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,6 +7,7 @@ html {
 body {
 	/* Margin bottom by footer height */
 	margin-bottom: 90px;
+	background-color: #c1d0f0;
 }
 .padded {
 	padding-top: 30px;
