--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,4 @@
-/* Sticky Footer Style
---------------------------------*/
+
 html {
 	position: relative;
 	min-height: 100%;
@@ -7,17 +6,28 @@ html {
 body {
 	/* Margin bottom by footer height */
 	margin-bottom: 90px;
-	background-color: #c1d0f0;
+	/*color: #c1d0f0;*/
+	color: #1a53ff;
+	/*background-color: #c1d0f0;*/
+}
+a {
+	color: rgb(255,100,30);
+}
+h1 {
+	color: #1a53ff;
 }
 .padded {
 	padding-top: 30px;
 }
+/* Sticky Footer Style
+--------------------------------*/
 .footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	/* Set the fixed height of the footer here */
+	 /*Set the fixed height of the footer here */
 	height: 90px;
 	background-color: #f5f5f5;
+	margin-top: 20px;
 	padding-top: 20px; 
 }
